# convergent-transformations

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
1_dataset_preparation/: 1_nsd_check_dataset.py  2_nsd_create_indexes.py  3_create_coco_indexes.py  4_nsd_organize_betas.py  5_things_process_dataset.ipynb  6_bold5000_process_dataset.ipynb  README.md
2_model_extraction/: 1_extract_vision_features.py  2_caption_dataset_pixtral.py  3_extract_language_features.py  README.md  models.yml
3_alignment/: 1_rsa_nsd_subject_subject_alignment.py  2_rsa_nsd_subject_model_alignment.py  3_rsa_nsd_subject_subject_alignment_partitions.py  4_rsa_nsd_subject_subject_alignment_controled.py  5_rsa_nsd_subject_model_alignment_controled.py  6_rsa_nsd_subject_group_subject_alignment.py  7_rsa_other_subject_subject_alignment.py  8_rsa_other_subject_model_alignment.py  9_compute_rsa_pvalues.ipynb  README.md
4_other_alignments/: 1_subject_subject_alignment_other_metrics.py  2_subject_model_alignment_other_metrics.py  3_aligment_language_vision_features.py  4_categories_alignment.py  5_extract_tokenizer_vocabulary.py  6_alignment_perceptual_statistics.py  7_untrained_models_alignment.py  8_extract_object_boxes.py  9_cross_subject_out_of_order.py  README.md
5_notebooks/: 01_rsa_spatial_alignment.ipynb  02_rsa_hemisphere_comparison.ipynb  03_rsa_model_hierarchy.ipynb  04_rsa_connectivity.ipynb  05_rsa_networks.ipynb  06_rsa_flat_surfaces.ipynb  08_split_biology_rsa.ipynb  09_alignment_cka_vs_rsa.ipynb  10_bold5000_alignment.ipynb  11_things_alignment.ipynb  README.md  (+7 more)
(+57 files in other folders)
